Refactored wiggle function. Set separators to pixel width, to avoid uneven sizing while wiggling.

--- a/src/App.scss
+++ b/src/App.scss
@@ -177,7 +177,7 @@ a:hover {
 
     .separator {
         background-color: $color-secondary;
-        width: 1.5em;
+        width: 10px;
         height: 100%;
     }
 }
